--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "electron ."
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.4",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-lottie-player": "^1.5.5",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
