--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
