--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "electron ."
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.2",
     "@supabase/supabase-js": "^2.38.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
@@ -19,7 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
